# APINF-DB

./: .env.sample  .gitignore  .gitlab-ci.yml  .oss-compliance-scanner.yaml.sample  Dockerfile.sample  QUICK_START.md  README.md  custom-rules.yaml.sample  cve.go  cyclonedx.go  dashboard_output.html  docker-compose.yaml.sample  docker-compose.yml  dp-track.go  go.mod  go.sum  grype.go  init.sh  integration_test.go  k8s.yaml.sample  main.go  restart-server.sh  scp-docker-compose.sh  slack.go  start-cli.sh  start-server.sh  start.sh  stop-server.sh  syft.go
.github/workflows/: oss-compliance.yml
cmd/: cmd_test.go  migrate.go  root.go  scan.go  server.go  setup_test_data.go
config/: config.go  config_test.go
db/: database.go  database_test.go  migrate.go  policy.go  report.go  sbom.go  scan.go  schema.sql  setting.go  vulnerability.go
db/migrations/: 000_create_migration_table.sql  001_initial_schema.sql  002_add_multi_tenant.sql  003_add_enhanced_fields.sql  004_add_reports_table.sql
logging/: logging.go
models/: policy.go  report.go  sbom.go  sbom_test.go  scan.go  setting.go  vulnerability.go
notifier/: slack.go  slack_test.go
policy/: engine.go  engine_test.go  rules.go
scanner/: grype.go  syft.go  syft_test.go
tenant/: manager.go  manager_test.go
test-projects/: run-tests.sh
test-projects/c-app/: Makefile  README.md
test-projects/cpp-app/: CMakeLists.txt  README.md  conanfile.txt  vcpkg.json
test-projects/cpp-app/src/: main.cpp
util/: scan.go
web/: page.go  report_generation_test.go  repository_management_test.go  server.go  server_test.go
(+42 files in other folders)
